fix(common): 🐛 add gap to .mw-indicators

--- a/resources/skins.citizen.styles/common/common.less
+++ b/resources/skins.citizen.styles/common/common.less
@@ -130,6 +130,7 @@ td {
 // TODO: Think of better places to put indicators;
 .mw-indicators {
 	display: flex;
+	gap: var( --space-xxs );
 	align-items: center;
 	padding-left: 10px;
 	margin-left: 10px;
